--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     column-gap: 40px;
 }
 
+.part {
+    box-shadow: 0px 7px 7px gray;
+}
+
 .part img {
     width: 80%;
     border-radius: 50%;
@@ -45,13 +49,17 @@
 .content {
     border-top: 6px solid #e24d16;
     background-color: black;
-    padding: 0px 20px;
+    padding: 20px 20px;
     
 }
 
 .content h3 {
-    margin-top: 20px;
     color:aliceblue;
     font-weight: 600;
     margin-bottom: 10px;
+}
+
+.content p {
+    color: antiquewhite;
+    
 }
