--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     letter-spacing: 2px;
 }
 
-.main-part {
+.person{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 40px;
